Refactor: sugestão de tags gratuita — extração local sem API externa
Substitui a chamada paga à API Anthropic por um algoritmo de extração
de palavras-chave 100% local: prioriza siglas (DNS, HTTP), termos com
alta frequência e filtra stopwords PT-BR. Zero custo, zero dependências
externas, resultado instantâneo.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>